{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 762,
  "lineage": "5e612a2f-604f-6556-ed4d-6d83e059dc4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Hong-Web-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3d5e4a4afb516ba",
            "associate_with_private_ip": "10.0.0.11",
            "association_id": "eipassoc-0c2236df18db76ca3",
            "domain": "vpc",
            "id": "eipalloc-0e3d5e4a4afb516ba",
            "instance": "i-003a79e66796cbeb6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08c5408110d1e00ce",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-35-185-61.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.185.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Hong_web",
            "aws_internet_gateway.Hong_igw",
            "aws_security_group.Hong_sg",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Hong_ngw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0084a36a975830ffc",
            "domain": "vpc",
            "id": "eipalloc-0084a36a975830ffc",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-173-39.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.173.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Hong_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5a6128e65676ebb",
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:instance/i-003a79e66796cbeb6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003a79e66796cbeb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Hongkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08c5408110d1e00ce",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ef05061803a099d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0757bb6fe54741577",
            "tags": {
              "Name": "Hong-Web"
            },
            "tags_all": {
              "Name": "Hong-Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0279b0f07b623ac8f"
            ]
          },
          "dependencies": [
            "aws_security_group.Hong_sg",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Hong_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:internet-gateway/igw-0d17fae10e85ca2f0",
            "id": "igw-0d17fae10e85ca2f0",
            "owner_id": "394521815646",
            "tags": {
              "Name": "Hong-IGW"
            },
            "tags_all": {
              "Name": "Hong-IGW"
            },
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Hong_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:394521815646:loadbalancer/app/Hong-alb/00b4485d514066c3",
            "arn_suffix": "app/Hong-alb/00b4485d514066c3",
            "dns_name": "Hong-alb-1314035011.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:394521815646:loadbalancer/app/Hong-alb/00b4485d514066c3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Hong-alb",
            "security_groups": [
              "sg-0279b0f07b623ac8f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03711690122856858"
              },
              {
                "subnet_id": "subnet-0757bb6fe54741577"
              }
            ],
            "subnets": [
              "subnet-03711690122856858",
              "subnet-0757bb6fe54741577"
            ],
            "tags": {
              "Name": "Hong-alb"
            },
            "tags_all": {
              "Name": "Hong-alb"
            },
            "vpc_id": "vpc-085640f21bc079f08",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.Hong_sg",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Hong_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:394521815646:listener/app/Hong-alb/00b4485d514066c3/44c116e19cb79886",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:394521815646:targetgroup/Hong-albtg/2c3519071e5c6ba7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:394521815646:listener/app/Hong-alb/00b4485d514066c3/44c116e19cb79886",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:394521815646:loadbalancer/app/Hong-alb/00b4485d514066c3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Hong_alb",
            "aws_lb_target_group.Hong_albtg",
            "aws_security_group.Hong_sg",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Hong_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:394521815646:targetgroup/Hong-albtg/2c3519071e5c6ba7",
            "arn_suffix": "targetgroup/Hong-albtg/2c3519071e5c6ba7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:394521815646:targetgroup/Hong-albtg/2c3519071e5c6ba7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Hong-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Hong_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0084a36a975830ffc",
            "connectivity_type": "public",
            "id": "nat-01354947a1f60573f",
            "network_interface_id": "eni-0a0599477f2c778bc",
            "private_ip": "10.0.0.97",
            "public_ip": "3.36.173.39",
            "subnet_id": "subnet-0757bb6fe54741577",
            "tags": {
              "Name": "Hong-ngw"
            },
            "tags_all": {
              "Name": "Hong-ngw"
            }
          },
          "dependencies": [
            "aws_eip.Hong_ngw_ip",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Hong_ngw_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:route-table/rtb-06f195d6878755dde",
            "id": "rtb-06f195d6878755dde",
            "owner_id": "394521815646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01354947a1f60573f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Hong-ngw-RoutingTable"
            },
            "tags_all": {
              "Name": "Hong-ngw-RoutingTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Hong_ngw_ip",
            "aws_nat_gateway.Hong_ngw",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Hong_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:route-table/rtb-0fe11076f7a02d309",
            "id": "rtb-0fe11076f7a02d309",
            "owner_id": "394521815646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d17fae10e85ca2f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Hong-RoutingTable"
            },
            "tags_all": {
              "Name": "Hong-RoutingTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Hong_igw",
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Hong_igwAss_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069b2306d4c9d6f48",
            "route_table_id": "rtb-0fe11076f7a02d309",
            "subnet_id": "subnet-0757bb6fe54741577"
          },
          "dependencies": [
            "aws_internet_gateway.Hong_igw",
            "aws_route_table.Hong_rt",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08685adc9ca7c1e20",
            "route_table_id": "rtb-0fe11076f7a02d309",
            "subnet_id": "subnet-03711690122856858"
          },
          "dependencies": [
            "aws_internet_gateway.Hong_igw",
            "aws_route_table.Hong_rt",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Hong_ngw_Ass_Prv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0665a9ddb33863ec9",
            "route_table_id": "rtb-06f195d6878755dde",
            "subnet_id": "subnet-0a99fb6f358b1602e"
          },
          "dependencies": [
            "aws_eip.Hong_ngw_ip",
            "aws_nat_gateway.Hong_ngw",
            "aws_route_table.Hong_ngw_RT",
            "aws_subnet.Hong_Prv",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083689f3907695ea8",
            "route_table_id": "rtb-06f195d6878755dde",
            "subnet_id": "subnet-02cf5526c96361cb5"
          },
          "dependencies": [
            "aws_eip.Hong_ngw_ip",
            "aws_nat_gateway.Hong_ngw",
            "aws_route_table.Hong_ngw_RT",
            "aws_subnet.Hong_Prv",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Hong_ngw_Ass_Prv_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04111f90b7a609b81",
            "route_table_id": "rtb-06f195d6878755dde",
            "subnet_id": "subnet-0a767d48e6e4f80b6"
          },
          "dependencies": [
            "aws_eip.Hong_ngw_ip",
            "aws_nat_gateway.Hong_ngw",
            "aws_route_table.Hong_ngw_RT",
            "aws_subnet.Hong_Prv_db",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee0e79b1d9076a73",
            "route_table_id": "rtb-06f195d6878755dde",
            "subnet_id": "subnet-0ff4a933d84e60ab3"
          },
          "dependencies": [
            "aws_eip.Hong_ngw_ip",
            "aws_nat_gateway.Hong_ngw",
            "aws_route_table.Hong_ngw_RT",
            "aws_subnet.Hong_Prv_db",
            "aws_subnet.Hong_Pub",
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Hong_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:security-group/sg-0279b0f07b623ac8f",
            "description": "HTTP_ICMP_SQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0279b0f07b623ac8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Hong-websg",
            "name_prefix": "",
            "owner_id": "394521815646",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Hong_Prv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:subnet/subnet-0a99fb6f358b1602e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a99fb6f358b1602e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "394521815646",
            "tags": {
              "Name": "Hong-Prv-a"
            },
            "tags_all": {
              "Name": "Hong-Prv-a"
            },
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:subnet/subnet-02cf5526c96361cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02cf5526c96361cb5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "394521815646",
            "tags": {
              "Name": "Hong-Prv-c"
            },
            "tags_all": {
              "Name": "Hong-Prv-c"
            },
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Hong_Prv_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:subnet/subnet-0a767d48e6e4f80b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0a767d48e6e4f80b6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "394521815646",
            "tags": {
              "Name": "Hong-Prv-DB-a"
            },
            "tags_all": {
              "Name": "Hong-Prv-DB-a"
            },
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:subnet/subnet-0ff4a933d84e60ab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0ff4a933d84e60ab3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "394521815646",
            "tags": {
              "Name": "Hong-Prv-DB-c"
            },
            "tags_all": {
              "Name": "Hong-Prv-DB-c"
            },
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Hong_Pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:subnet/subnet-0757bb6fe54741577",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0757bb6fe54741577",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "394521815646",
            "tags": {
              "Name": "Hong-Pub-a"
            },
            "tags_all": {
              "Name": "Hong-Pub-a"
            },
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:subnet/subnet-03711690122856858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03711690122856858",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "394521815646",
            "tags": {
              "Name": "Hong-Pub-c"
            },
            "tags_all": {
              "Name": "Hong-Pub-c"
            },
            "vpc_id": "vpc-085640f21bc079f08"
          },
          "dependencies": [
            "aws_vpc.hong_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hong_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:394521815646:vpc/vpc-085640f21bc079f08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c72412cff497fa53",
            "default_route_table_id": "rtb-062fda7e3f4b031c4",
            "default_security_group_id": "sg-0ea30628b5e5678d4",
            "dhcp_options_id": "dopt-85cb84ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-085640f21bc079f08",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-062fda7e3f4b031c4",
            "owner_id": "394521815646",
            "tags": {
              "Name": "Hong-VPC"
            },
            "tags_all": {
              "Name": "Hong-VPC"
            }
          }
        }
      ]
    }
  ]
}